Migrate flow writers
Use Uint types and BindingMap instead of widened types and lists. Also
fix hybrid mode, which would not work due to 'order' being set to zero
for both actions.

Change-Id: Iea887c5080da233d5692ec3d89870148529b8946
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>